Global Task Add UI update + some cleanup

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TemporaTasks"
         xmlns:userControl="clr-namespace:TemporaTasks.UserControls"
-        xmlns:tb="http://www.hardcodet.net/taskbar" xmlns:aero="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
+        xmlns:tb="http://www.hardcodet.net/taskbar"
+        xmlns:aero="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
         mc:Ignorable="d"
         d:DesignHeight="450" d:DesignWidth="800"
         Title="TemporaTasks" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" KeyDown="Window_KeyDown" MouseUp="Window_MouseUp" MinWidth="404" MinHeight="500" Loaded="Window_Loaded"
