Added missing code For past due task info count

--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -79,7 +79,9 @@
 
                 <Label FocusVisualStyle="{DynamicResource DummyFocus}" x:Name="label" Content="Home" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" DockPanel.Dock="Left" Padding="0" VerticalContentAlignment="Stretch"/>
 
-                <Label x:Name="TaskCount" Content="42t.39c" FontFamily="Courier New" Foreground="{StaticResource Text}" FontSize="18" Padding="0" Margin="20 0 0 3" VerticalContentAlignment="Bottom" Opacity="0.4"/>
+                <Label x:Name="DueTaskCount" Content="12u." FontFamily="Courier New" Foreground="{StaticResource PastDue}" FontSize="18" Padding="0" Margin="20 0 0 3" VerticalContentAlignment="Bottom" Opacity="0.8"/>
+
+                <Label x:Name="TaskCount" Content="42t.39c" FontFamily="Courier New" Foreground="{StaticResource Text}" FontSize="18" Padding="0" Margin="0 0 0 3" VerticalContentAlignment="Bottom" Opacity="0.4"/>
 
             </StackPanel>
 
