--- a/UserControls/IndividualTask.xaml
+++ b/UserControls/IndividualTask.xaml
@@ -19,7 +19,7 @@
 
         <Border x:Name="Background" Background="{StaticResource DarkBlue}" Opacity="0" Grid.Row="1" CornerRadius="5" MinHeight="40" MouseEnter="Background_MouseEnter" MouseLeave="Background_MouseLeave" MouseDown="Background_MouseDown" />
 
-        <Line VerticalAlignment="Bottom" Stroke="{StaticResource Accent}" StrokeThickness="2" X2="{Binding ActualWidth, ElementName=Background}" Grid.Row="2" Opacity="0.25" />
+        <Line VerticalAlignment="Bottom" Stroke="{StaticResource Accent}" StrokeThickness="2" X2="{Binding ActualWidth, ElementName=Background}" Grid.Row="2" Opacity="0.25" IsHitTestVisible="False"/>
 
         <DockPanel VerticalAlignment="Center" Grid.Row="1">
 
