Search improvement Button `/` added Searchbox background corrected.

--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -49,7 +49,7 @@
                     </DockPanel>
                 </Border>
 
-                <Border Background="{StaticResource Secondary}" CornerRadius="5" Margin="20 0 0 0">
+                <Border Background="{StaticResource TitleBar}" CornerRadius="5" Margin="20 0 0 0">
                     <StackPanel Orientation="Horizontal">
                         <ComboBox x:Name="SortComboBox" Width="100" VerticalContentAlignment="Center" SelectionChanged="SortComboBox_SelectionChanged" Focusable="False" Padding="15 0 0 0" Margin="0" Cursor="Hand" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular">
                             <ComboBoxItem Content="Name"/>
