--- a/UserControls/IndividualTask.xaml
+++ b/UserControls/IndividualTask.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:TemporaTasks.UserControls"
              mc:Ignorable="d"
-             d:DesignHeight="100" d:DesignWidth="800" Loaded="IndividualTask_Loaded">
+             d:DesignHeight="100" d:DesignWidth="800" Loaded="IndividualTask_Loaded" Cursor="Hand">
 
     <Grid x:Name="ucGrid">
 
