--- a/Pages/AddTaskPage.xaml
+++ b/Pages/AddTaskPage.xaml
@@ -80,27 +80,48 @@
                         
                     </Grid>
 
-                    <StackPanel Margin="0 15 0 0">
+                    <Grid Margin="0 15 0 0">
 
-                        <Label Content="Tags" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="20"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-                        <Grid Margin="0 5 0 0" Height="40">
+                        <StackPanel>
 
-                            <DockPanel>
+                            <Label Content="Tags" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
 
-                                <StackPanel Orientation="Horizontal" x:Name="TagsStack" DockPanel.Dock="Left"/>
+                            <Grid Margin="0 5 0 0" Height="40">
 
-                                <TextBox x:Name="TagsTextbox" Style="{StaticResource TransparentUnroundedTextBox}" DockPanel.Dock="Right" PreviewKeyDown="TagsTextbox_PreviewKeyDown" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
+                                <DockPanel>
 
-                            </DockPanel>
+                                    <StackPanel Orientation="Horizontal" x:Name="TagsStack" DockPanel.Dock="Left"/>
 
-                            <Border BorderBrush="#363636" BorderThickness="2" CornerRadius="10"/>
+                                    <TextBox x:Name="TagsTextbox" Style="{StaticResource TransparentUnroundedTextBox}" DockPanel.Dock="Right" PreviewKeyDown="TagsTextbox_PreviewKeyDown" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
 
-                            <Border x:Name="TagsBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" CornerRadius="10"/>
+                                </DockPanel>
 
-                        </Grid>
+                                <Border BorderBrush="#363636" BorderThickness="2" CornerRadius="10"/>
 
-                    </StackPanel>
+                                <Border x:Name="TagsBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" CornerRadius="10"/>
+
+                            </Grid>
+
+                        </StackPanel>
+
+                        <StackPanel Grid.Column="2">
+
+                            <Label Content="Recurrance" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
+
+                            <Grid Margin="0 5 0 0">
+                                <TextBox x:Name="RecurranceTextBox" Style="{StaticResource RoundedTextBox}" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
+                                <Border x:Name="RecurranceBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" Height="40" CornerRadius="10"/>
+                            </Grid>
+
+                        </StackPanel>
+
+                    </Grid>
 
                     <!--<DockPanel Margin="0 5 0 5" Height="30">
 
