--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -67,7 +67,7 @@
                             <ComboBoxItem Content="Created"/>
                             <ComboBoxItem Content="Due"/>
                         </ComboBox>
-                        <userControl:IconButton x:Name="SortButton" SVGSource="{StaticResource burgerIcon}" Width="40" Height="40" MouseDown="SortButton_MouseDown" RenderTransformOrigin="0.5,0.5">
+                        <userControl:IconButton x:Name="SortButton" SVGSource="{StaticResource burgerIcon}" Width="40" Height="40" MouseDown="ReverseButton_MouseDown" RenderTransformOrigin="0.5,0.5">
                             <userControl:IconButton.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform ScaleY="-1"/>
