--- a/Resources/Dictionaries/Icons.xaml
+++ b/Resources/Dictionaries/Icons.xaml
@@ -136,4 +136,18 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <!--https://www.svgrepo.com/svg/532089/bell-alt-->
+
+    <DrawingImage x:Key="bellIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
+                <GeometryDrawing Geometry="F1 M24,24z M0,0z M12.0009,5C13.4331,5 14.8066,5.50571 15.8193,6.40589 16.832,7.30606 17.4009,8.52696 17.4009,9.8 17.4009,11.7691 17.846,13.2436 18.4232,14.3279 19.1606,15.7133 19.5293,16.406 19.5088,16.5642 19.4849,16.7489 19.4544,16.7997 19.3026,16.9075 19.1725,17 18.5254,17 17.2311,17L6.77066,17C5.47638,17 4.82925,17 4.69916,16.9075 4.54741,16.7997 4.51692,16.7489 4.493,16.5642 4.47249,16.406 4.8412,15.7133 5.57863,14.3279 6.1558,13.2436 6.60089,11.7691 6.60089,9.8 6.60089,8.52696 7.16982,7.30606 8.18251,6.40589 9.19521,5.50571 10.5687,5 12.0009,5z M12.0009,5L12.0009,3 M9.35489,20C10.0611,20.6233 10.9888,21.0016 12.0049,21.0016 13.0209,21.0016 13.9486,20.6233 14.6549,20">
+                    <GeometryDrawing.Pen>
+                        <Pen Brush="{StaticResource Icons}" Thickness="2" StartLineCap="Round" EndLineCap="Round" LineJoin="Round" MiterLimit="1" />
+                    </GeometryDrawing.Pen>
+                </GeometryDrawing>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
 </ResourceDictionary>
