--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -34,14 +34,11 @@
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
 
                 <Grid Margin="0 0 20 0">
-                    <userControl:IconButton SVGSource="{StaticResource bellIcon}" Width="40" Cursor="Hand" MouseDown="IconButton_MouseDown">
-                        <userControl:IconButton.ToolTip>
-                            <ToolTip>
-                                <userControl:ButtonToolTip ToolTipText="Toggle notifications" Button1Text="b"/>
-                            </ToolTip>
-                        </userControl:IconButton.ToolTip>
-                    </userControl:IconButton>
-                    <Line x:Name="notifLine" X2="12" Y2="12" Stroke="#505050" StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeThickness="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="1 2 0 0" Opacity="0" IsHitTestVisible="False"/>
+                    <Border x:Name="NotifButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Cursor="Hand" Width="40" IsMouseDirectlyOverChanged="NotifButton_IsMouseDirectlyOverChanged" MouseDown="NotifButton_MouseDown"/>
+                    <Grid x:Name="NotifIcon" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5" Opacity="0.25">
+                        <Image Source="{StaticResource bellIcon}" MaxWidth="15" MaxHeight="15"/>
+                        <Line x:Name="notifLine" X2="12" Y2="12" Stroke="{StaticResource Icons}" StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeThickness="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="1 2 0 0" Opacity="0"/>
+                    </Grid>
                 </Grid>
 
                 <Border x:Name="SearchBorder" Background="{StaticResource Secondary}" CornerRadius="5" Padding="5 0 5 0" IsMouseDirectlyOverChanged="SearchBorder_IsMouseDirectlyOverChanged" MouseMove="Border_MouseMove" MouseDown="SearchBorder_MouseDown" Cursor="IBeam">
