--- a/Pages/AddTaskPage.xaml
+++ b/Pages/AddTaskPage.xaml
@@ -82,11 +82,11 @@
 
                     <Grid Margin="0 15 0 0">
 
-                        <Grid.ColumnDefinitions>
+                        <!--<Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                             <ColumnDefinition Width="20"/>
                             <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
+                        </Grid.ColumnDefinitions>-->
 
                         <StackPanel>
 
@@ -110,7 +110,7 @@
 
                         </StackPanel>
 
-                        <StackPanel Grid.Column="2">
+                        <!--<StackPanel Grid.Column="2">
 
                             <Label Content="Recurrance" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
 
@@ -119,7 +119,7 @@
                                 <Border x:Name="RecurranceBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" Height="40" CornerRadius="10"/>
                             </Grid>
 
-                        </StackPanel>
+                        </StackPanel>-->
 
                     </Grid>
 
