--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -34,7 +34,15 @@
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
 
                 <Grid Margin="0 0 20 0">
-                    <Border x:Name="NotifButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Cursor="Hand" Width="40" IsMouseDirectlyOverChanged="NotifButton_IsMouseDirectlyOverChanged" MouseDown="NotifButton_MouseDown"/>
+                    <Border x:Name="NotifButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Cursor="Hand" Width="40" IsMouseDirectlyOverChanged="NotifButton_IsMouseDirectlyOverChanged" MouseDown="NotifButton_MouseDown">
+                        <Border.ToolTip>
+                            <ToolTip>
+                                <ToolTip.Content>
+                                    <userControl:ButtonToolTip ToolTipText="Mute notifications" Button1Text="m"/>
+                                </ToolTip.Content>
+                            </ToolTip>
+                        </Border.ToolTip>
+                    </Border>
                     <Grid x:Name="NotifIcon" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5" Opacity="0.25">
                         <Image Source="{StaticResource bellIcon}" MaxWidth="15" MaxHeight="15"/>
                         <Line x:Name="notifLine" X2="12" Y2="12" Stroke="{StaticResource Icons}" StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeThickness="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="1 2 0 0" Opacity="0"/>
